--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "build": "gulp clean && SET NODE_ENV=production & gulp build",
     "examples": "gulp dev:server",
     "lint": "eslint ./; true",
-    "publish:site": "NODE_ENV=production gulp publish:examples",
-    "release": "NODE_ENV=production gulp release",
+    "publish:site": "SET NODE_ENV=production & gulp publish:examples",
+    "release": "SET NODE_ENV=production gulp release",
     "start": "gulp dev",
     "test": "echo \"no tests yet\" && exit 0",
     "watch": "gulp watch:lib"
